# langchain-scylladb

./: README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  integration-tests.yml  publish.yml
libs/langchain-scylladb/: README.md  pyproject.toml
libs/langchain-scylladb/src/langchain_scylladb/: __init__.py  cache.py  chat_message_histories.py  index.py  storage.py  vectorstores.py
libs/langchain-scylladb/tests/integration_tests/: conftest.py  test_cache.py  test_chat_message_histories.py  test_index.py  test_storage.py  test_vectorstores.py
libs/langchain-scylladb/tests/unit_tests/: test_cache.py  test_chat_message_histories.py  test_imports.py  test_index.py  test_storage.py  test_vectorstores.py
